update for microk8s

--- a/bitcoin.conf
+++ b/bitcoin.conf
@@ -1,5 +1,9 @@
 server=1
-rpcbind=localhost
+whitelist=127.0.0.1
+rpcuser=admin
+rpcpassword=123456!
+
+[test]
+rpcbind=127.0.0.1
 rpcport=8332
-rpcuser=9muta
-rpcpassword=testtest55
+prune=5000
