add rest and ip allow

--- a/bitcoin.conf
+++ b/bitcoin.conf
@@ -1,4 +1,5 @@
 server=1
+rest=1
 whitelist=127.0.0.1
 rpcuser=admin
 rpcpassword=123456!
@@ -6,4 +7,5 @@ rpcpassword=123456!
 [test]
 rpcbind=127.0.0.1
 rpcport=8332
+rpcallowip=172.16.0.0/24
 prune=5000
